# coniferest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Cargo.toml  LICENSE  MANIFEST.in  README.md  naive.ipynb  pyproject.toml  setup.py
.ci/: pre_executed_nb.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmark.yml  python-publish.yml  test.yml  wheels.yml
coniferest/: aadforest.py  calc_mean_paths.c  calc_mean_paths.pxd  calc_mean_paths.pyx  calc_paths_sum.pxd  calc_paths_sum.pyx  cedarforest.py  coniferest.py  datasets.py  evaluator.py  experiment.py  isoforest.py  label.py  limeforest.py  pariou.py  pineforest.py  scripts.py  utils.py
coniferest/datasets/: README.md  __init__.py  ztf_m31.py
coniferest/onnx/: _parse.py  convert.py  proto.py
coniferest/onnx/operator_converters/: __init__.py  aadforest.py
coniferest/onnx/shape_calculators/: aadforest.py
coniferest/session/: __init__.py  callback.py
coniferest/sklearn/: isoforest.py
docs/: conf.py  coniferest.datasets.rst  coniferest.rst  coniferest.session.rst  coniferest.sklearn.rst  index.rst  intro.rst  isoforest.rst  modules.rst  notebooks.rst  pariou.rst  quickstart.rst  requirements.txt  tutorial.rst
docs/_templates/: layout.html
docs/notebooks/: AISSAI_2024_tutorial.ipynb  animated-discovery.ipynb  devnet.ipynb  devnet_datasets.ipynb  gz2.py  itree-visualisation.ipynb  mnist.ipynb  plasticc.ipynb  us-names.ipynb
docs/pre_executed/: AISSAI_2024_tutorial.ipynb  plasticc.ipynb
isocedar/: cedarforest.py  datasets.py  experiment.py  isoforest.py
notebooks/: README.md  cartoons.ipynb  comparison_on_ml_datasets.ipynb  comparison_with_sklearn.ipynb  distributions_of_scores.ipynb  forests.ipynb  larchforest.ipynb  test_isoforests.ipynb  treeviz.py
notes/2021.10.21/: forest_sampling.xopp
presentations/2022.06.16/: presentation.xopp
rust/: Cargo.toml
rust/src/: lib.rs  mut_slices.rs  selector.rs  stable_sort.rs  thread_pool.rs  tree_traversal.rs
rust/src/tree_traversal/: calc_paths_sum_transpose_impl.rs  find_leaf.rs  mod.rs
scripts/: plotext_dataset.py  plotext_pineforest.py
src/: lib.rs
src/coniferest/: __init__.py  aadforest.py  calc_paths_sum.pxd  calc_paths_sum.pyx  coniferest.py  evaluator.py  isoforest.py  label.py  limeforest.py  pineforest.py  utils.py
src/coniferest/datasets/: README.md  __init__.py  plasticc_gp.py  ztf_m31.py
src/coniferest/onnx/: __init__.py  _container.py  _parse.py  convert.py  proto.py
src/coniferest/onnx/operator_converters/: aadforest.py
src/coniferest/onnx/shape_calculators/: __init__.py  aadforest.py
src/coniferest/session/: __init__.py  callback.py  oracle.py
src/coniferest/sklearn/: isoforest.py
tests/: conftest.py  test_aadforest.py  test_coniferest.py  test_datasets.py  test_isoforest.py  test_onnx.py  test_session.py  test_stable_sort.py
tests/test_aadforest/: test_budget_auto.pickle  test_budget_auto_prior_influence_one.pickle  test_regression_fit_known.pickle
tests/test_coniferest/: test_regression_build_one.pickle  test_regression_build_one.yml  test_regression_build_trees.pickle  test_regression_build_trees.yml
tests/test_isoforest/: test_regression.pickle  test_regression.yml  test_regression_importance.pickle  test_regression_signatures.pickle
