[package]
name = "coniferest"
version = "0.0.13"
edition = "2021"

[lib]
name = "coniferest"
crate-type = ["cdylib"]

# We'd like to build fast code with `pip install -e '.[dev]'`
[profile.dev]
opt-level = 3

[dependencies]
enum_dispatch = "0.3"
itertools = "0.12"
pyo3 = { version = "0.21", features = ["abi3-py39", "extension-module"] }
# Needs to be consistent with ndarray dependecy in numpy
ndarray = { version = "0.15", features = ["rayon"] }
num-traits = "0.2"
numpy = "0.21"
# Needs to be consistent with rayon dependecy in ndarray
rayon = "1.9"
