[package]
name = "coniferest"
version = "0.1.2"
edition = "2021"

[lib]
name = "calc_trees"
crate-type = ["cdylib"]

# We'd like to build fast code with `pip install -e '.[dev]'`
[profile.dev]
opt-level = 3

# Makes linking slower, but the resulting extension module is faster
[profile.release]
lto = true
codegen-units = 1

[features]
default = ["pyo3/abi3-py310"]

[dependencies]
enum_dispatch = "0.3"
itertools = "0.14"
pyo3 = { version = "0.25", features = ["extension-module"] }
# Needs to be consistent with ndarray dependency in numpy
ndarray = { version = "0.16", features = ["rayon"] }
num-traits = "0.2"
numpy = "0.25"
# Needs to be consistent with rayon dependency in ndarray
rayon = "1.11"
